fixed flickering when hovering over anchors with id attribute (adds the
2006-02-06  Jakub Friedl <jfriedl@suse.cz>
  * stylesheets/gimp-help-screen.css: fixed flickering when hovering
    over anchors with id attribute (adds the rule for :visited and :hover
    pseudoclasses)

--- a/stylesheets/gimp-help-screen.css
+++ b/stylesheets/gimp-help-screen.css
@@ -281,12 +281,14 @@
       vertical-align: top;
     }
 
-    p a[id] {
+    p a[id],
+    p a[id]:hover,
+    p a[id]:visited {
       margin: 0;
       padding: 0;
       display: inline;
       background-image: none;
-    } 
+    }
 
     p a,
     p a:hover,
